# bismuth_cpp

./: .gitignore  CMakeLists.txt  NetrwTreeListing  README.md  compile_commands.json  run
bismuth/: CMakeLists.txt
bismuth/include/bismuth/: NetrwTreeListing  animatedsprite.hpp  animation.hpp  application.hpp  assetmanager.hpp  audiomanager.hpp  bismuth.hpp  camera.hpp  color.hpp  cursor.hpp  font.hpp  glhelper.hpp  guimanager.hpp  iomanager.hpp  keylistener.hpp  logging.hpp  math.hpp  mouselistener.hpp  particle.hpp  particleemitter.hpp  physicsmanager.hpp  playersystem.cpp  primitives.hpp  renderbatch.hpp  renderer.hpp  renderingsystem.hpp  renderino.hpp  scene.hpp  scenemanager.hpp  shader.hpp  shaperenderer.hpp  sound.hpp  sprite.hpp  spriterenderer.hpp  textrenderer.hpp  texture.hpp  tile.hpp  tiledmanager.hpp  tiledmap.hpp  window.hpp
bismuth/include/bismuth/editors/: asseteditor.hpp
bismuth/include/bismuth/gui/: gui_button.hpp  gui_element.hpp  gui_label.hpp  gui_texture.hpp  gui_window.hpp  guibutton.hpp  guielement.hpp  guilabel.hpp  guistyle.hpp  guiwindow.hpp  guiwindow_manager.hpp
bismuth/include/bismuth/utils/: counter.hpp
bismuth/src/: NetrwTreeListing
bismuth/src/core/: NetrwTreeListing  animatedsprite.cpp  animation.cpp  application.cpp  assetmanager.cpp  audio.hpp  audiomanager.cpp  camera.cpp  collision.cpp  color.cpp  counter.cpp  cursor.cpp  font.cpp  glhelper.cpp  guimanager.cpp  iomanager.cpp  keylistener.cpp  logging.cpp  mama.txt  math.cpp  mouselistener.cpp  particleemitter.cpp  physicsmanager.cpp  renderbatch.cpp  renderer.cpp  renderingsystem.cpp  renderino.cpp  scene.cpp  scenemanager.cpp  shader.cpp  shaperenderer.cpp  sound.cpp  sprite.cpp  spriterenderer.cpp  spriterenderer.hpp  textrenderer.cpp  texture.cpp  tile.cpp  tiledmanager.cpp  tiledmap.cpp  (+1 more)
bismuth/src/editors/: asseteditor.cpp
bismuth/src/gui/: gui_animated_sprite.cpp  gui_button.cpp  gui_label.cpp  gui_texture.cpp  gui_window.cpp  guibutton.cpp  guilabel.cpp  guiwindow.cpp
bismuth/src/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
bismuth/tests/: CMakeLists.txt  main.cpp  shader_test.cpp  testapp.cpp
bismuth/tests/gui_test/: gui_test.cpp  gui_test.hpp  test.cpp
bismuth/tests/gui_test/scenes/: gui_window_scene.cpp  gui_window_scene.hpp  test_scene_one.cpp  test_scene_one.hpp  test_scene_two.cpp  test_scene_two.hpp
game/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
native/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
test/: CMakeLists.txt
(+925 files in other folders)
